--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,8 @@ time { color: #898989; }
 
 .container { max-width: 800px; margin: 0 auto; }
 
+.date { /*color: black;*/ font-size: 1em; font-style: italic; }
+
 /*********/
 /*Bandeau*/
 /*********/
